--- a/services/users/Dockerfile
+++ b/services/users/Dockerfile
@@ -1,25 +1,24 @@
 # base image
-FROM python:3.7.2-alpine
+FROM python:3.7.2-slim
 
-  # install dependencies
-RUN apk update && \
-apk add --virtual build-deps gcc python-dev musl-dev && \
-apk add postgresql-dev && \
-apk add netcat-openbsd
+# install netcat
+RUN apt-get update && \
+    apt-get -y install netcat && \
+    apt-get clean
 
-  # set working directory
+# set working directory
 WORKDIR /usr/src/app
 
-  # add and install requirements
+# add and install requirements
 COPY ./requirements.txt /usr/src/app/requirements.txt
 RUN pip install -r requirements.txt
 
-  # add entrypoint-prod.sh
-COPY ./entrypoint-prod.sh /usr/src/app/entrypoint-prod.sh
-RUN chmod +x /usr/src/app/entrypoint-prod.sh
+# add entrypoint.sh
+COPY ./entrypoint.sh /usr/src/app/entrypoint.sh
+RUN chmod +x /usr/src/app/entrypoint.sh
 
-  # add app
+# add app
 COPY . /usr/src/app
 
-  # run server
-CMD ["/usr/src/app/entrypoint-prod.sh"]
+# run server
+CMD ["/usr/src/app/entrypoint.sh"]
